# blender-bridge

./: .gitignore  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md  bb_client.py  bridge_server.py  build.py  mcp_server.py  pyproject.toml  start_bridge.py  test_client.py
.github/workflows/: ci.yml
blender_bridge/: __init__.py  capture.py  checkpoint.py  constants.py  dispatcher.py  executor.py  history.py  introspection.py  jobs.py  protocol.py  recipes.py  server.py  ui.py
blender_bridge/integrations/: __init__.py  polyhaven.py
blender_mcp/: __init__.py  capture.py  checkpoint.py  constants.py  dispatcher.py  executor.py  history.py  introspection.py  protocol.py  server.py  ui.py
blender_mcp/integrations/: __init__.py  polyhaven.py
bridge_client/: __init__.py  cli.py  client.py  codec.py
tests/: test_client_unit.py  test_codec.py  test_headless.py  test_jobs.py  test_polyhaven_cache.py  test_recipes.py
