[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-bridge"
version = "2.0.0"
description = "Blender Bridge protocol client and tools"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Drifter" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.26.0"]

[project.scripts]
blender-bridge = "bridge_client.cli:main"

[tool.setuptools.packages.find]
include = ["bridge_client*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"blender_bridge/__init__.py" = ["E402"]
"blender_bridge/dispatcher.py" = ["F401"]
"blender_bridge/executor.py" = ["F541"]
"blender_bridge/protocol.py" = ["F821"]
"start_bridge.py" = ["F401"]
